--- a/src/main/webapp/common/sidebar.html
+++ b/src/main/webapp/common/sidebar.html
@@ -179,7 +179,7 @@
             <li data-level="2">
 
                 <a
-                        href="../examine/index.html"
+                        href="manager/examine/index"
                         id="menu_managerexamineindex"
                         haschild="false"
                 >
