--- a/src/main/webapp/common/sidebar.html
+++ b/src/main/webapp/common/sidebar.html
@@ -137,7 +137,7 @@
             <li data-level="2">
 
                 <a
-                        href="../work/admin/work.html"
+                        href="manager/admin/work"
                         id="menu_manageradminwork"
                         haschild="false"
                 >
@@ -207,7 +207,7 @@
             <li data-level="2">
 
                 <a
-                        href="../statute/index.html"
+                        href="manager/statute/index"
                         id="menu_managerstatuteindex"
                         haschild="false"
                 >
@@ -238,7 +238,7 @@
             <li data-level="2">
 
                 <a
-                        href="../area/area.html"
+                        href="manager/area"
                         id="menu_managerarea"
                         haschild="false"
                 >
@@ -252,7 +252,7 @@
             <li data-level="2">
 
                 <a
-                        href="../office/office.html"
+                        href="manager/office"
                         id="menu_manageroffice"
                         haschild="false"
                 >
